--- a/mobile center/firstpage.html
+++ b/mobile center/firstpage.html
@@ -61,21 +61,9 @@
 	  </div>
     <h2>WELCOME TO MOBILE CENTER</h2>
   
-	<button>
-		<center>
-			<a href="book.html">
-				<div>
-					<span>
-					  CLICK FOR REPAIR
-					</span>
-				  </div>
-				  <div>
-					<span>
-					  <p>Thanks </p>
-					</span>
-				  </div>
-			</a>
-		</center>
+	<button type="submit" class="btn" onclick="document.location='book.html'">
+		<span class="btn-text-one">Click for repair</span>
+		<span class="btn-text-two">Great!</span>
 	</button>
 </body>
 </html>
