--- a/mobile center/thank.html
+++ b/mobile center/thank.html
@@ -13,8 +13,8 @@
         </div>
     </div>
 
-    <h1>Thank You</h1>
-    <h2>your query has been successfully submitted</h2>
-    <h3>our excutive will get back to you soon.</h3>
+    <h1 align="center">Thank You</h1>
+    <h2 align="center">your query has been successfully submitted</h2>
+    <h3 align="center">our excutive will get back to you soon.</h3>
 </body>
 </html>
