--- a/mobile center/book.html
+++ b/mobile center/book.html
@@ -120,7 +120,7 @@
                 </select>
             </div><br>
 
-            <button type="submit" onclick="document.location='thank.html'">
+            <button type="submit" class="bttn" onclick="document.location='thank.html'">
                 <center>
                         <div>
                               CLICK FOR BOOK
@@ -130,7 +130,6 @@
         </center>
     </form>
 </body>
-
 <script>
 </script>
 </html>
